# suncodes-ai-chat

./: Dockerfile  LICENSE  README.md  pyproject.toml  tox.ini
docs/: Poetry 基本用法.md
src/suncodes_ai_chat/: __init__.py  main.py
src/suncodes_ai_chat/suncodes_api/base_chat/: base_chat_api.py
src/suncodes_ai_chat/suncodes_app/base_chat/: base_chat.py  base_chat_stream_handler.py
src/suncodes_ai_chat/suncodes_common/asr/: baidu_asr.py  xunfei_asr.py
src/suncodes_ai_chat/suncodes_common/base_chain/: custom_chain.py  session_memory.py
src/suncodes_ai_chat/suncodes_common/base_stream/: pipeline_stream.py  queue_manager.py  stream_cache_manager.py  stream_handler.py
src/suncodes_ai_chat/suncodes_common/cache/: cache_key.py  memory_cache.py
src/suncodes_ai_chat/suncodes_common/embedding/: zhipu_embedding.py
src/suncodes_ai_chat/suncodes_common/llm/: deepseek_llm.py  doubao_llm.py  zhipu_llm.py
src/suncodes_ai_chat/suncodes_common/oss/: oss_cli.py
src/suncodes_ai_chat/suncodes_common/tts/: baidu_tts.py  custom_edge_tts.py  xunfei_tts.py
src/suncodes_ai_chat/suncodes_common/vector_storage/: xxt_qdrant.py
src/suncodes_ai_chat/suncodes_common/websocket_pool/: websocket_manager.py
src/suncodes_ai_chat/suncodes_config/: ai-chat-dev.yml  ai-chat-test.yml  ai-chat.yml  config_exception.py  config_logging.py  config_manager.py  config_settings.py  env.py  logging_formatter.py
src/suncodes_ai_chat/suncodes_constants/: baidu_constants.py  deepseek_constants.py  doubao_constants.py  xunfei_constants.py  zhipu_constants.py
src/suncodes_ai_chat/suncodes_document/: doc_settings.py
src/suncodes_ai_chat/suncodes_model/: ws_exception_model.py
src/suncodes_ai_chat/suncodes_utils/: file_base64.py  md_text.py  random_string.py
tests/: test_version.py
(+6 files in other folders)
