[suncodes]
# 自定义变量，表明目前处于什么环境
env = "dev"

[tool.poetry]
name = "suncodes-ai-chat"
version = "0.1.0"
description = "My Awesome Project!"
readme = "README.md"
authors = ["suncodes <suncodes@example.com>"]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]

packages = [
    { include = "suncodes_ai_chat", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.80"
botocore = "^1.35.80"
chardet = "^5.2.0"
fastapi = "^0.115.4"
Flask = "^3.0.3"
langchain = "^0.3.10"
langchain-community = "^0.3.10"
langchain-core = "^0.3.22"
langchain-mongodb = "^0.2.0"
langchain-openai = "^0.2.6"
langchain-text-splitters = "^0.3.2"
qdrant-client = "^1.12.1"
mutagen = "^1.47.0"
pydantic = "^2.9.2"
PyMySQL = "^1.1.1"
Requests = "^2.32.3"
SQLAlchemy = "^2.0.35"
uvicorn = "^0.32.0"
websocket_client = "^1.8.0"
zhipuai = "^2.1.5.20230904"
python-multipart = "^0.0.9"
websockets = "^12.0"
websocket-client = "^1.8.0"
certifi = "^2024.8.30"
mysql = "^0.0.3"
mysql-connector-python = "^9.1.0"
flask-cors = "^5.0.0"
jieba = "^0.42.1"

moviepy = "^2.1.1"
pydub = "^0.25.1"
edge-tts = "^7.0.0"
rank-bm25 = "^0.2.2"
pyyaml = "6.0.2"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
isort = "^5.12.0"
pytest = "^7.3.1"
tox = "^4.5.2"
mkdocs = "^1.4.3"
mkdocs-material = "^8.5.11"
pytest-pylint = "^0.19.0"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"

[tool.pylint.design]
max-line-length = 120

[tool.poetry.scripts]
start = "suncodes_ai_chat.main:start"
